welcome.lessons.welcome.bat.bool2.FizzBuzz.scala.error
fizzBuzz:11: error: type mismatch;
 found   : Int
 required: String
return a
       ^